fixed line-height gap on img grid

--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -5,6 +5,9 @@ $white: #ffffff;
 $black: #000000;
 $light-grey: #cccccc;
 
+html {
+  line-height: 0;
+}
 body {
   background-color: $black;
 
@@ -206,10 +209,6 @@ a:visited, .page-links:visited {
   -ms-flex-wrap: wrap; 
   flex-wrap: wrap; 
   flex-flow: row wrap;
-
-  // -ms-flex-direction: row; ^
-  // flex-direction: row; ^
-  // align-content: flex-start; // still works without ^ ^ ^ 
 }
 
 .grid-box {
@@ -217,27 +216,19 @@ a:visited, .page-links:visited {
 }
 
 .box {
-  // display: -webkit-box;
-  // display: -ms-flexbox;
-  // display: flex;
-  // -webkit-box-pack: center; 
-  // -ms-flex-pack: center; 
-  // justify-content: center; 
   position: relative;
-    text-align: center;
+  text-align: center;
   .box-number {
     display: none;
-
     opacity: 1;
-    z-index: 1000;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-
+    z-index: 1000;
   }
   .responsive-img {
-    // float: left;
+    // fix bottom margin? could be issue w position: relative
   }
 }
 
@@ -260,8 +251,6 @@ a:visited, .page-links:visited {
 .small-box {
   font-weight: 800;
   font-size: 3rem;
-  // text-align: center;
-
   img {
     height: 230px;
     width: 100%;
@@ -302,7 +291,6 @@ a:visited, .page-links:visited {
 .Modal {
   position: absolute;
   top: 0;
-  // left: 40px;
   right: 0;
   bottom: 0;
   background-color: $black;
@@ -331,7 +319,6 @@ a:visited, .page-links:visited {
 .Overlay {
   position: fixed;
   top: 0;
-  // left: 0;
   right: 0;
   bottom: 0;
   background-color: $black;
